1.加入注解@RequireLogin 降低代码复杂度 2.jdk 升级到 17，改造 switch